2002-06-01  Thien-Thi Nguyen  <ttn@gnu.org>

	* progmodes/prolog.el (prolog-mode-syntax-table): Add flags to
	?/ and ?* entries to support /* */ style comments.
	(prolog-font-lock-keywords): New var.
	(prolog-mode): Enable font-locking; set `font-lock-defaults'.

2002-06-01  Kim F. Storm  <storm@cua.dk>

	* simple.el (choose-completion-string-functions): New special hook.
	(choose-completion-string1): Renamed from choose-completion-string.
	(choose-completion-string): Run choose-completion-string-functions
	until success, and only call choose-completion-string1 if it fails.

2002-05-31  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua--last-deleted-region-pos)
	(cua--last-deleted-region-text): New aux variables.
	(cua-delete-region): Set them.
	(cua-repeat-replace-region): Use them to find the replacement text.

2002-05-31  Juanma Barranquero  <lektu@terra.es>

	* emulation/viper-cmd.el (viper-smart-suffix-list, viper-ask-level):
	Fix typos.

2002-05-31  Kim F. Storm  <storm@cua.dk>

	* progmodes/compile.el (grep-tree-command, grep-tree-files-aliases)
	(grep-tree-ignore-CVS-directories, grep-tree-ignore-case):
	New custom variables.
	(grep-compute-defaults): Compute grep-tree-command's default value.
	(grep-expand-command-macros): New aux function.
	(grep-tree-last-regexp, grep-tree-last-files): New aux variables.
	(grep-tree): New command like grep-find but extended prompting.

2002-05-30  Richard M. Stallman  <rms@gnu.org>

	* files.el (find-file-default): Add defvar for var already used.

	* menu-bar.el (menu-bar-showhide-fringe-menu): Use defvar.

	* subr.el (open-network-stream, open-network-stream-nowait)
	(open-network-stream-server, process-kill-without-query):
	Moved from simple.el.

	* simple.el (open-network-stream, open-network-stream-nowait)
	(open-network-stream-server, process-kill-without-query):
	Moved to subr.el.

	* simple.el (byte-compiling-files-p): Function deleted.

	* textmodes/ispell.el (ispell-library-directory): Renamed from